--- a/index.html
+++ b/index.html
@@ -27,36 +27,53 @@
         position: absolute;
         left: 20px;
         bottom: 20px;
-        font-size: 12px;
-    }
-    #controlPanel input, #controlPanel label {
-        color: white;
         font-size: 16px;
     }
+    #controlPanel input, #controlPanel label {
+        color: rgb(113, 113, 113);  /* 文字顏色改為黑色以增強對比 */
+        font-size: 26px;  /* 文字放大兩倍 */
+    }
+    #controlPanel input {
+        background: white;  /* 輸入框背景顏色為白色以增強可見性 */
+        border: 2px solid #888;  /* 增加边框的可见性 */
+        border-radius: 4px;
+        padding: 5px;  /* 添加內填充 */
+        width: 70px; /* 固定寬度以保持外观一致性 */
+        box-shadow: 0px 0px 5px rgba(0,0,0,0.5); /* 添加阴影以增强输入框的立体感 */
+    }
 </style>
+
 </head>
 <body>
 <div id="controlPanel">
     <label for="hopsInput">Hops:</label>
-    <input type="number" id="hopsInput" value="3" min="1" max="10" />
+    <input type="number" id="hopsInput" value="3" min="1" max="10" /><br>
+    <label for="powerInput">TX Power (%):</label>
+    <input type="number" id="powerInput" value="100" min="1" max="100" />
 </div>
 <canvas id="canvas"></canvas>
 <div id="info">
-    使用說明: 左鍵點擊創建節點或激活波動，右鍵點擊刪除節點。<br>
-    作者: Oliver | <a href="https://github.com/oliver0804" target="_blank">GitHub</a>
+    Instructions: Left-click to create or activate nodes, right-click to remove nodes.<br>
+    Author: Oliver | <a href="https://github.com/oliver0804" target="_blank">GitHub</a>
 </div>
 <script>
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
     const hopsInput = document.getElementById('hopsInput');
+    const powerInput = document.getElementById('powerInput');
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
 
     let nodes = [];
     let initialHops = parseInt(hopsInput.value); // 初始hops值
+    let initialPower = parseInt(powerInput.value); // 初始TX Power百分比
 
     hopsInput.addEventListener('change', () => {
         initialHops = Math.min(Math.max(parseInt(hopsInput.value), 1), 10);
+    });
+
+    powerInput.addEventListener('change', () => {
+        initialPower = Math.min(Math.max(parseInt(powerInput.value), 1), 100);
     });
 
     canvas.addEventListener('click', function(e) {
@@ -86,11 +103,12 @@
     });
 
     function createNode(x, y, isPrimary) {
+        let maxRadius = 200 * (initialPower / 100); // 根据TX Power百分比调整最大半径
         let node = {
             x,
             y,
-            maxRadius: 200,  // 最大半徑調整為200像素
-            speed: 2,         // 擴散速度
+            maxRadius: maxRadius, // 最大半径
+            speed: 1.1,             // 擴散速度
             waves: []
         };
         if (isPrimary) {
