--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
         font-size: 16px;
     }
     #controlPanel input, #controlPanel label {
-        color: rgb(113, 113, 113);  /* 文字顏色改為黑色以增強對比 */
-        font-size: 26px;  /* 文字放大兩倍 */
+        color: rgb(113, 113, 113); 
+        font-size: 26px; 
     }
     #controlPanel input {
-        background: white;  /* 輸入框背景顏色為白色以增強可見性 */
-        border: 2px solid #888;  /* 增加边框的可见性 */
+        background: white; 
+        border: 2px solid #888; 
         border-radius: 4px;
-        padding: 5px;  /* 添加內填充 */
-        width: 70px; /* 固定寬度以保持外观一致性 */
-        box-shadow: 0px 0px 5px rgba(0,0,0,0.5); /* 添加阴影以增强输入框的立体感 */
+        padding: 5px;  
+        width: 70px; 
+        box-shadow: 0px 0px 5px rgba(0,0,0,0.5); 
     }
     #tip {
         position: fixed;
